[FIX] graph height on small screen sizes

--- a/src/app/components/graph-visualizer/graph-visualizer.component.scss
+++ b/src/app/components/graph-visualizer/graph-visualizer.component.scss
@@ -2,12 +2,8 @@
     --gap: 2rem;
     --padding-block: 2rem;
 
-    .graph-container:focus-within {
-        outline: 0.5rem solid var(--color--primary);
-    }
-
     .graph-container {
-        min-height: 60rem;
+	    height: min( 60rem , 70vh );
     }
 
     .settings {
